# Nexus-OS

./: .gitignore  README.md
.github/workflows/: release.yml
daemon/: README.md  pilot-cli.py  pyproject.toml
daemon/pilot/: __init__.py  actions.py  config.py  server.py
daemon/pilot/agents/: __init__.py  _code_preamble.py  chain_planner.py  code_sanitizer.py  executor.py  planner.py  self_heal.py  verifier.py
daemon/pilot/memory/: __init__.py  semantic.py  store.py
daemon/pilot/models/: __init__.py  cloud.py  llamacpp.py  ollama.py  router.py
daemon/pilot/security/: __init__.py  audit.py  permissions.py  sandbox.py  sanitizer.py  validator.py  vault.py
daemon/pilot/system/: __init__.py  api_client.py  apt.py  browser.py  clipboard.py  code_exec.py  context.py  dbus_client.py  download.py  environment.py  file_intel.py  filesystem.py  gnome.py  input_control.py  multimodal.py  network.py  package_mgr.py  platform_detect.py  plugins.py  power.py  processes.py  scheduler.py  screen.py  snapshots.py  (+7 more)
daemon/tests/: conftest.py
packaging/: build.sh  com.pilot.policy  pilot-daemon.service  pilot.desktop
packaging/debian/: control  postinst  prerm  rules
schemas/: action_plan.schema.json
schemas/actions/: file_operation.json  gnome_setting.json  package_operation.json  service_operation.json  terminal_command.json
schemas/responses/: execution_result.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  hotkey.rs  main.rs  tray.rs
tauri-app/ui/: index.html  package-lock.json  package.json  tsconfig.json
(+11 files in other folders)
